k8s/_legacy/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: code
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: code
                com.docker.compose.service: frontend
                com.docker.compose.network.match-api-network: "true"
                com.docker.compose.network.question-api-network: "true"
                com.docker.compose.network.user-api-network: "true"
        spec:
            containers:
                - name: frontend
                  image: frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-3000
                      containerPort: 3000
                    - name: frontend-80
                      containerPort: 80
