k8s/_legacy/base/question-service-deployment.yaml
#! question-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: question-service
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: question-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: code
            com.docker.compose.service: question-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: code
                com.docker.compose.service: question-service
                com.docker.compose.network.question-api-network: "true"
                com.docker.compose.network.question-db-network: "true"
        spec:
            containers:
                - name: question-express
                  image: question-express
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - wget --no-verbose --tries=1 --spider http://localhost:9002/health || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 5
                    timeoutSeconds: 10
                    failureThreshold: 5
                  ports:
                    - name: question-s-9002
                      containerPort: 9002
