k8s/_legacy/base/user-db-deployment.yaml
#! user-db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-db
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: user-db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: code
            com.docker.compose.service: user-db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: code
                com.docker.compose.service: user-db
                com.docker.compose.network.user-db-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: user-db
                  image: postgres:16.4
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - pg_isready -U peerprep-user-express -d user
                    periodSeconds: 10
                    initialDelaySeconds: 30
                    timeoutSeconds: 10
                    failureThreshold: 5
                  ports:
                    - name: user-db-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: data-user-db
                      mountPath: /data/user-db
            volumes:
                - name: data-user-db
                  persistentVolumeClaim:
                    claimName: user-db-user-db-docker
