k8s/_legacy/base/user-service-deployment.yaml
#! user-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-service
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: user-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: code
            com.docker.compose.service: user-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: code
                com.docker.compose.service: user-service
                com.docker.compose.network.user-api-network: "true"
                com.docker.compose.network.user-db-network: "true"
        spec:
            containers:
                - name: user-express
                  image: user-express
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - wget --no-verbose --tries=1 --spider http://localhost:9001/health || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 5
                    timeoutSeconds: 10
                    failureThreshold: 5
                  ports:
                    - name: user-servi-9001
                      containerPort: 9001
