k8s/_legacy/base/question-db-expose.yaml
#! question-db-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: question-db
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: question-db
spec:
    selector:
        com.docker.compose.project: code
        com.docker.compose.service: question-db
    ports:
        - name: question-d-5432
          port: 5432
          targetPort: question-d-5432
