k8s/_legacy/base/question-service-expose.yaml
#! question-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: question-service
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: question-service
spec:
    selector:
        com.docker.compose.project: code
        com.docker.compose.service: question-service
    ports:
        - name: question-s-9002
          port: 9002
          targetPort: question-s-9002
