k8s/_legacy/base/user-service-expose.yaml
#! user-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: user-service
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: user-service
spec:
    selector:
        com.docker.compose.project: code
        com.docker.compose.service: user-service
    ports:
        - name: user-servi-9001
          port: 9001
          targetPort: user-servi-9001
