k8s/_legacy/base/match-api-network-network-policy.yaml
#! match-api-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: match-api-network-network-policy
    namespace: code
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.match-api-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.match-api-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.match-api-network: "true"
